--- a/src/front/style.css
+++ b/src/front/style.css
@@ -10,20 +10,38 @@
 
 #menu {
     position: absolute;
-    z-index: 10;
-    display: flex;
     top: 50%;
     left: 2%;
+    transform: translateY(-50%);
     width: 350px;
     max-height: 90vh;
+    background-color: rgba(255,255,255,0.9);
+    padding: 20px;
+    box-shadow: 0 8px 16px rgba(0,0,0, 0.1);
+    display: flex;
     flex-direction: column;
     overflow-y: auto;
-    border: 1px solid #fff;
-    background-color: rgba(255,255,255,0.9);
+    border-radius: 12px;
+    border: 1px solid #e5e7eb;
+    backdrop-filter: blur(8px);
+    z-index: 10;
 }
 
 #menu-text {
     font-size: 16px;
     margin-left: 10px;
     align-self: center;
+}
+
+#car-list img {
+    width: 30%;
+    height: 30%;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-wrap {
+    flex-wrap: wrap;
 }
